# KU_Leuven_CS_Assignments

./: .gitignore
ArtificialIntelligence/Extra/: constraintsrelax.tex  optimalsearch.tex
Artificiele intelligentie [H06U1a]/Assignments/: FeedbackAssignments
Artificiele intelligentie [H06U1a]/Extra/: basicsearch.tex  constraintsbacktrack.tex  games.tex  heuristicsearch.tex  versionspaces.tex
Comparative Programming Languages [H0S01a]/Exercise Session JavaScript/: readme.txt
Comparative Programming Languages [H0S01a]/Rust Project Developing a Window Manager/assignment/: .project  Cargo.toml
Comparative Programming Languages [H0S01a]/Rust Project Developing a Window Manager/assignment/src/: a_fullscreen_wm.rs  a_fullscreen_wm_tests.rs  b_tiling_wm.rs  b_tiling_wm_tests.rs  c_floating_windows.rs  c_floating_windows_tests.rs  custom_trait.rs  d_minimising_windows.rs  d_minimising_windows_tests.rs  e_fullscreen_windows.rs  e_fullscreen_windows_tests.rs  f_gaps.rs  f_gaps_tests.rs  g_multiple_workspaces.rs  g_multiple_workspaces_tests.rs  h_different_tiling_layout.rs  h_different_tiling_layout_tests.rs  lib.rs  wm_error.rs
Cryptografie en netwerkbeveiliging [H05D9a]/WWWAndEmailSecurity/: SeppeDuwe_WWWAndEmailSecurity  plain-http  plain-http.txt  ssl-no-clientauth  ssl-no-clientauth.txt
Declarative Languages [H0N03a]/: DeclarativeLanguagesExamQuestionsSolutions.txt
Machine Learning and Inductive Inference [H02C1a]/: session_1-zoo.xls
Multi-Agent Systems [H02H4a]/: MAS Exercise Session 1.txt  MAS Exercise Session 2.txt  README.txt
(+730 files in other folders)
